added the index optimization and code reformating
